LOGCXX-292: Value continuation does not properly handle CRLF in property files